Todos los enlaces de las imagenes fueron arregladas

--- a/core/templates/core/colaboracion.html
+++ b/core/templates/core/colaboracion.html
@@ -16,7 +16,7 @@
     
     <header class="main">
      <h2>Donando por camisetas y sudaderas ayudas a HackMadrid</h2>
-     <span class="image main"><img src="images/camisuda.png" alt="" /></span>
+     <span class="image main"><img src="{% static 'core/images/camisuda.png' %}" alt="" /></span>
      <h2>Precios:</h2>
      <p>Donación por camiseta:  10 Euros</p>
      <p>Donación por sudadera:  20 Euros</p>
@@ -25,7 +25,7 @@
     
     <header class="main">
      <h2>Proximamente: coffee mugs</h2>
-     <span class="image main"><img src="images/mug.png" alt="" /></span>
+     <span class="image main"><img src="{% static 'core/images/mug.png' %}" alt="" /></span>
      <h2>Donaciones:</h2>
      <p>Coffee mug: proximamente disponibles</p>
      <p>Deben solicitarse en: theShadow@hackmadrid.org</p>
