--- a/core/templates/core/conferencias.html
+++ b/core/templates/core/conferencias.html
@@ -26,27 +26,27 @@
     </header>
     <div class="posts">
         <article>
-            <a href="#" class="image"><img src="images/conf/linux1.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux1.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/linux2.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux2.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/linux3.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux3.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/linux4.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux4.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/linux5.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux5.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
             <ul class="actions">
@@ -54,7 +54,7 @@
             </ul>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/linux6.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/linux6.jpg' %}" alt="" /></a>
             <h3>Linux.Party->2018.</h3>
             <p>15/09/2018</p>
             <ul class="actions">
@@ -86,37 +86,37 @@
     </header>
     <div class="posts">
         <article>
-            <a href="#" class="image"><img src="images/conf/tech2.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech2.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019 - InstallParty de ReutilizaK.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech3.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech3.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech4.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech4.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech5.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech5.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech10.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech6.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech11.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech11.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech6.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech6.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
             <ul class="actions">
@@ -124,7 +124,7 @@
             </ul> 
         </article>
         <article>
-            <a href="#" class="image"><img src="images/conf/tech7.jpg" alt="" /></a>
+            <a href="#" class="image"><img src="{% static 'core/images/conf/tech7.jpg' %}" alt="" /></a>
             <h3>Tech.Party->2019.</h3>
             <p>14/09/2019</p>
             <ul class="actions">
