--- a/core/templates/core/flaghunters.html
+++ b/core/templates/core/flaghunters.html
@@ -8,7 +8,7 @@
         <h1>flagHunters Team</h1>
     </header>
 
-    <span class="image main"><img src="images/bannerCTF.png" alt="" /></span>
+    <span class="image main"><img src="{% static 'core/images/bannerCTF.png' %}" alt="" /></span>
     
     <hr class="major" />
 
