--- a/core/templates/core/hackerspace.html
+++ b/core/templates/core/hackerspace.html
@@ -8,7 +8,7 @@
         <h1>Hackerspace: Aaron Swartz</h1>
     </header>
 
-    <span class="image main"><img src="images/aaron.png" alt="" /></span>
+    <span class="image main"><img src="{% static 'core/images/aaron.png' %}" alt="" /></span>
 
     <hr class="major" />
 
